# tiny-games-hs

./: .gitignore  ANNOUNCE  README.md  base  default  flake.nix  getratings  getratingstsv.hs  guess1.hs  guess2.hs  hackage  mines.hs  minify.hs  play  ratings.tsv  test
base/: template1.hs
base/7up7down/: 7up7down.hs  README.md
base/acey-deucey/: README.md  acey-deucey.hs
base/flower-seeds/: README.md  flower-seeds.hs
base/lambda-ray/: README.md  lambda-ray.hs
base/log2048/: log2048.hs
base/peyton-says/: README.md  peyton-says.hs
base/rhythm/: README.md  rhythm.hs
base/shoot/: Main.hs  README.md  shoot.hs
base/snake/: README.md  snake.hs
base/timing/: README.md  timing.hs
base/woosh/: README.md  build.sh  caves.env  forest.env  woosh.caves.hs  woosh.forest.hs  woosh.hs
default/: guess2.hs  template1.hs  wordle.hs
default/lambda-ray/: lambda-ray.hs
default/lc/: Import.hs  README.md  lc.hs
default/lol/: Import.hs  Imports.hs  lol.hs
default/shmupemup/: Import.hs  Imports.hs  README.md  shmupemup.hs
default/short-guess/: README.md  short-guess.hs
default/space-invaders/: Import.hs  README.md  space-invaders.hs
default/swish/: Import.hs  Imports.hs  README.md  build.sh  easy.env  survival.env  swish.easy.hs  swish.hs  swish.survival.hs
default/tsp/: README.md  tsp.hs
gam-10-80-hs-default/: guess2.hs
hackage/: bulls-n-cows.hs  guess2.hs  template1.hs
hackage/brickbreaker/: README.md  brickbreaker.cabal  brickbreaker.hs  brickbreaker.unminified.hs  minify.hs  minify.sh
prelude/: fifteen.hs  guess1.hs  pure-doors.hs  template1.hs
(+98 files in other folders)
