cabal-version: 3.0
name: brickbreaker
version: 0.1.0.0

common common
  ghc-options: -Wall
  build-depends: base
  default-language: Haskell2010

executable brickbreaker
  import: common
  main-is: brickbreaker.unminified.hs
  build-depends: gloss

executable minified
  import: common
  main-is: brickbreaker.hs
  build-depends: gloss
  ghc-options: -Wno-missing-signatures

executable minify
  import: common
  main-is: minify.hs
